--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -75,13 +75,25 @@
         android:description="@string/permission_access_provider_desc"/>
     <uses-permission
         android:name="com.android.email.permission.ACCESS_PROVIDER"/>
+        
+    <resources>
+       <color name="primary">#FF9800</color>
+       <color name="accent">#42A5F5</color>
+       <color name = "primary_dark">#EF6C00</color>
+       <style name="MaterialEmailTheme" parent="android:Theme.Material.Light">
+          <item name="android:colorPrimary">@color/primary</item>
+          <item name="android:colorPrimaryDark">@color/primary_dark</item>
+          <item name="android:colorAccent">@color/accent</item>
+          <item name="android:statusBarColor">@color/primary_dark</item>
+       </style>
+    </resources>
 
     <application
         android:name=".EmailApplication"
         android:icon="@mipmap/ic_launcher_mail"
         android:label="@string/app_name"
         android:requiredAccountType="com.android.exchange,com.android.email.imap,com.android.email.pop3,com.android.email.legacy.imap"
-        android:theme="@style/UnifiedEmailTheme"
+        android:theme="@style/MaterialEmailTheme"
         android:hardwareAccelerated="true"
         android:allowBackup="false"
         android:supportsRtl="true" >
